<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_grey"
    tools:context=".view.ForgotPasswordActivity">

    <TextView
        android:id="@+id/textViewForgotPasswords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_black"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/teal"
        android:textSize="28sp"
        android:layout_marginTop="140dp"/>

    <EditText
        android:id="@+id/editInputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:background="@drawable/edit_email_bg"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/reset_pass"
        android:textColor="@color/teal"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/btn_bg"/>

</LinearLayout>